feat: search, inputs and streams REST endpoints
